[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TileTopia-HQ/jung"
authors = ["Aaron Boxer <boxerab@protonmail.com>"]

[workspace.dependencies]
jung-core = { path = "crates/jung-core" }
jung-style = { path = "crates/jung-style" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
