[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/TileTopia-HQ/jung"
authors = ["TileTopia <tiletopia@proton.me>"]
description = "Geospatial data visualization and map styling"

[workspace.dependencies]
jung-core = { path = "crates/jung-core" }
jung-style = { path = "crates/jung-style" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ttf-parser = "0.25"
