[package]
name = "jung-core"
description = "Core rendering engine for geospatial symbology"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
jung-style = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
