[package]
name = "jung-wasm"
description = "WebAssembly build of Jung for browser-side geospatial rendering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jung-core = { workspace = true }
jung-style = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
